--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Copyright 2015
+-->
 <head>
 	<title>An exmaple website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
