--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!-- Copyright 2015
 -->
 <head>
-	<title>An exmaple website</title>
+	<title>A Great Site</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -20,7 +20,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Faisal Humayun 2015</p>
 	</footer>
 </body>
 </html>
