--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <!-- Copyright 2015
 -->
 <head>
-	<title>An exmaple website</title>
+	<title>A Very Respectful Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,11 +16,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Some respectful words go here
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Faisal Humayun 2015</p>
 	</footer>
 </body>
 </html>
